--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -72,7 +72,7 @@
   "click_for_changes": "Haga clic aquí para ver qué ha cambiado",
   "click_for_other_platforms": "Haga clic aquí, si desea otra plataforma",
   "click_here_for_help": "Haga clic aquí para saber más al respecto.",
-  "click_to_copy_passphrase": "Haga clic aquí para copiar la frase de contraseña en el portapapeles",
+  "click_to_copy_passphrase": "Haga clic aquí para copiar la frase de recuperación en el portapapeles",
   "click_to_refresh": "Haga clic para actualizar",
   "click_words": "Haga clic en las palabras en el orden correcto",
   "close": "Cerrar",
@@ -100,16 +100,16 @@
   "data": "Datos",
   "date": "Fecha",
   "deadline": "Deadline",
-  "deadline_hours": "Fecha límite (horas)",
+  "deadline_hours": "Deadline (horas)",
   "decimals": "Decimales",
   "decrypt": "Descifrar",
   "define_your_pin": "Defina su PIN",
   "delete": "Borrar",
-  "delisted": "Excluido",
+  "delisted": "Suprimido",
   "delivered": "Entregado",
   "delivery_deadline": "Fecha de entrega",
   "description": "Descripción",
-  "do_not_broadcast": "No transmitir",
+  "do_not_broadcast": "No emitir",
   "domain": "Dominio",
   "download": "Descargar",
   "download_at_verified_source": "Descargar directamente de una fuente verificada",
@@ -130,8 +130,8 @@
   "error_alias_not_yet_registered": "Alias aún no se ha registrado.",
   "error_alias_owned_by_other_account": "Alias ya es propiedad de otra cuenta.",
   "error_alias_transfer_genesis": "No se permite transferir alias a la cuenta de Genesis.",
-  "error_ask_order_filled": "Pregunte pedido ya completado.",
-  "error_bid_order_filled": "Orden de oferta ya completada.",
+  "error_ask_order_filled": "Orden de venta ya realizado.",
+  "error_bid_order_filled": "Orden de compra ya realizado.",
   "error_clipboard_copy": "Error al copiar al portapapeles.",
   "error_decryption_failed": "Falló el descifrado.",
   "error_dgs_delivery": "¡Un error desconocido ocurrió! La compra en Marketplace puede entregarse o no.",
@@ -148,8 +148,8 @@
   "error_invalid_alias_name": "Nombre de alias no válido.",
   "error_invalid_alias_sell_price": "Precio de venta de alias no válido.",
   "error_invalid_alias_uri_length": "Longitud de URI no válida.",
-  "error_invalid_ask_order": "Pedido de pedido no válido.",
-  "error_invalid_bid_order": "Orden de puja no válida.",
+  "error_invalid_ask_order": "Orden de compra no válido.",
+  "error_invalid_bid_order": "Orden de compra no válido.",
   "error_invalid_dgs_price_change": "Cambio de precio de bienes digitales no válido.",
   "error_invalid_dgs_refund": "Reembolso de bienes digitales no válido.",
   "error_invalid_ordinary_payment": "Pago no válido.",
@@ -158,11 +158,11 @@
   "error_no_attached_message": "No se encontró ningún mensaje adjunto.",
   "error_no_public_key": "La cuenta no tiene una clave pública.",
   "error_not_allowed": "No permitido.",
-  "error_not_enough_assets": "No hay suficientes fichas.",
+  "error_not_enough_assets": "No hay suficientes tokens.",
   "error_not_enough_funds": "Fondos insuficientes.",
   "error_not_forging": "La cuenta no se está falsificando.",
   "error_not_specified": "__name__ no especificado.",
-  "error_passphrase_required": "La frase de contraseña es un campo obligatorio.",
+  "error_passphrase_required": "La frase de recuperación es un campo obligatorio.",
   "error_post_only": "¡Esta solicitud solo se acepta mediante POST!",
   "error_public_key_already_announced": "Ya se ha anunciado la clave pública para esta cuenta.",
   "error_public_key_announcement_no_recipient": "El anuncio de clave pública no se puede adjuntar a transacciones sin destinatario.",
@@ -184,8 +184,8 @@
   "error_unknown": "Un error desconocido ocurrió.",
   "error_unknown_name": "Nombre desconocido__.",
   "error_wrong_buyer_for_alias": "Comprador incorrecto para el alias.",
-  "escrow": "Depósito",
-  "failed": "Ha fallado",
+  "escrow": "Escrow",
+  "failed": "Fallido",
   "fee": "Tarifa",
   "fee_nqt": "Tarifa",
   "feedback": "Realimentación",
@@ -194,7 +194,7 @@
   "from": "De",
   "full_hash": "Hash completo",
   "generate": "Generar",
-  "generate_passphrase": "Generar frase de contraseña",
+  "generate_passphrase": "Generar frase de recuperación",
   "generate_qr": "Generar QR",
   "generation_signature": "Firma de generación",
   "generator": "Generador",
@@ -213,7 +213,7 @@
   "immutable": "Inmutable",
   "info": "Información",
   "input_pin": "PIN de entrada",
-  "issuer": "Editor",
+  "issuer": "Emisor",
   "language": "Idioma",
   "leasing": "Arrendamiento",
   "loading": "Cargando...",
@@ -228,8 +228,8 @@
   "marketplace_quantity_change": "Cambio de cantidad de Marketplace",
   "marketplace_refund": "Reembolso de Marketplace",
   "marketplace_removal": "Eliminación de Marketplace",
-  "memorize_passphrase_help": "Guarde esta frase de contraseña en un lugar seguro. Esta frase de contraseña es necesaria para acceder a su cuenta Signum.",
-  "memorize_passphrase_help_addon": "Si pierde la frase de contraseña, no podrá realizar ninguna transacción, es decir, sus monedas se perderán. La frase de contraseña no se puede recuperar. Mantenga esta frase de contraseña en secreto. Todos los que conocen la frase de contraseña son de facto el propietario de la cuenta.",
+  "memorize_passphrase_help": "Guarde esta frase de recuperación en un lugar seguro. Esta frase de recuperación es necesaria para acceder a su cuenta Signum.",
+  "memorize_passphrase_help_addon": "Si pierde la frase de recuperación, no podrá realizar ninguna transacción, es decir, sus monedas se perderán. La frase de recuperación no se puede recuperar. Mantenga esta frase de recuperación en secreto. Todos los que conocen la frase de recuperación son de facto el propietario de la cuenta.",
   "message": "Mensaje",
   "message_is_text": "Mensaje de texto",
   "messages": "Conversaciones",
@@ -262,7 +262,7 @@
   "order": "Pedido",
   "ordinary_payment": "Pago",
   "other": "Otro",
-  "passphrase": "Frase de contraseña",
+  "passphrase": "Frase de recuperación",
   "paste_csv_content": "Pegue el contenido CSV aquí",
   "payload": "Carga útil",
   "payload_hash": "Hash de carga útil",
@@ -273,7 +273,7 @@
   "peers": "Nodos",
   "pending": "Pendiente",
   "percentage": "Porcentaje",
-  "pin_hint": "El PIN se utiliza para verificar las acciones realizadas con su cuenta. Puede ser un valor alfanumérico corto que sea fácil de memorizar. Si olvida su PIN, simplemente puede volver a crear su cuenta utilizando la frase de contraseña generada previamente.",
+  "pin_hint": "El PIN se utiliza para verificar las acciones realizadas con su cuenta. Puede ser un valor alfanumérico corto que sea fácil de memorizar. Si olvida su PIN, simplemente puede volver a crear su cuenta utilizando la frase de recuperación generada previamente.",
   "platform": "Plataforma",
   "poll_creation": "Creación de encuestas",
   "previous_block": "Bloque anterior",
@@ -290,7 +290,7 @@
   "recent_transactions": "Transacciones Recientes",
   "recent_transactions_since": "Transacciones recientes desde",
   "recipient": "Recipiente",
-  "recipient_address": "Dirección del receptor",
+  "recipient_address": "Dirección del recipiente",
   "recipient_id": "ID de destinatario",
   "recipient_no_public_key": "La cuenta del destinatario no tiene una clave pública, lo que significa que nunca ha tenido una transacción saliente. La cuenta tiene un balance de __burst__ Signa. Verifique la dirección de su destinatario antes de enviar.",
   "recipients": "Destinatarios",
@@ -306,11 +306,11 @@
   "reset_recipients": "Restablecer destinatarios",
   "reward_recipient": "Dirección de la pool",
   "same_out": "¿Desea enviar la misma cantidad",
-  "scoop_num": "Número de cucharada",
+  "scoop_num": "Número de Scoop",
   "search": "Buscar",
   "search_or_start_message": "Buscar o iniciar un mensaje nuevo",
   "secure": "Seguro",
-  "seed_password_generator": "Mueva el cursor para sembrar el generador de números aleatorios y crear una frase de contraseña segura.",
+  "seed_password_generator": "Mueva el cursor para sembrar el generador de números aleatorios y crear una frase de recuperación segura.",
   "select_node": "Seleccionar nodo",
   "select_node_description": "Seleccione el nodo al que desea conectarse. Puede usar un nodo sugerido, pero también puede ingresar una URL de un nodo arbitrario.",
   "select_recipients": "Seleccionar destinatarios",
@@ -332,7 +332,7 @@
   "smart_contract_payment": "Pago del contrato",
   "spend_all": "Gástalo todo",
   "standard_fee": "Estándar",
-  "state": "Expresar",
+  "state": "Estado",
   "status": "Estado",
   "submit": "Enviar",
   "subscriptions": "Suscripciones",
@@ -345,10 +345,10 @@
   "suggested_fee": "Tarifas sugeridas",
   "tabulator": "Tabulador",
   "time": "Hora",
-  "timestamp": "Marca de tiempo",
+  "timestamp": "Timestamp",
   "title": "Título",
   "to": "A",
-  "token": "Simbólico",
+  "token": "Token",
   "total": "Total",
   "total_amount": "Cantidad total",
   "total_fee": "Costo total",
@@ -373,22 +373,22 @@
   "valid": "Válido",
   "valid_thru": "Válido hasta",
   "validate": "Validar",
-  "validating_node": "Validando ...",
+  "validating_node": "Validando...",
   "verified_source": "Fuente verificada y segura",
   "verify": "Verificar",
   "version": "Versión",
   "volume_24h": "Volumen 24h",
   "vote": "Votar",
-  "vote_casting": "Transmisión de votos",
+  "vote_casting": "Emisión de votos",
   "warning": "Advertencia",
   "wrong_pin": "Pin erróneo",
-  "yes": "sí",
+  "yes": "Sí",
   "you": "Tú",
   "you_sent_burst": "Enviaste Signa",
   "your_address": "Su dirección",
   "your_name": "Tu nombre",
-  "your_passphrase": "Tu frase de contraseña",
-  "youve_got_burst": "¡Tienes a Signa!",
+  "your_passphrase": "Tu frase de recuperación",
+  "youve_got_burst": "¡Tienes Signa!",
   "balance_locked": "Balance bloqueado",
   "balance_available": "Balance disponible",
   "commitment": "Compromiso",
@@ -427,10 +427,10 @@
   "success_transaction_executed": "Transacción ejecutada con éxito",
   "no_tokens_available": "Esta cuenta no posee tokens",
   "trade_tokens_with": "Intercambia tokens con",
-  "simple": "Sencillo",
-  "trader": "Comerciante",
+  "simple": "Simple",
+  "trader": "Trader",
   "miner": "Minero",
-  "power": "Completo",
+  "power": "Power",
   "user_profile_desc_simple": "Panel de control simplificado. Lo mejor para usuarios de nivel de entrada.",
   "user_profile_desc_power": "Panel avanzado con mucha información adicional.",
   "user_profile_desc_miner": "Tablero con información adicional para mineros.",
@@ -438,7 +438,7 @@
   "select_profile": "Seleccione un perfil de usuario para diferentes paneles",
   "define_your_salt": "Defina su sal individual",
   "enter_salt": "Ingrese un texto alfanumérico arbitrario",
-  "salt_hint": "Para aumentar la seguridad de su frase de contraseña, su propio elemento de texto individual (salt) se agrega a la lista de palabras generada aleatoriamente. Debe ser una expresión alfanumérica corta y simple, por ejemplo, algo personal o generado aleatoriamente.",
+  "salt_hint": "Para aumentar la seguridad de su frase de recuperación, su propio elemento de texto individual (salt) se agrega a la lista de palabras generada aleatoriamente. Debe ser una expresión alfanumérica corta y simple, por ejemplo, algo personal o generado aleatoriamente.",
   "salt": "Agregue sal",
   "your_new_account": "Su cuenta Signum",
   "click_to_print": "Haga clic para imprimir",
@@ -453,17 +453,17 @@
   "no_block_forged": "Aún no se ha forjado ningún bloque",
   "set_reward_recipient_on": "Se unió el",
   "add_treasury_account": "Añadir cuenta de tesorería",
-  "avgCommitment": "Promedio Compromiso",
+  "avgCommitment": "Avg. Compromiso",
   "cashback_id": "ID de reembolso",
-  "distribution_tokenholders": "Distribución de titulares de tokens",
+  "distribution_tokenholders": "Distribución de poseedores de tokens",
   "feeBurnt": "Tarifa quemada",
   "feeCashback": "Tarifa de reembolso",
-  "mint_token": "acuñación de fichas",
+  "mint_token": "Emisión de tokens",
   "notifications_disabled": "Notificaciones deshabilitadas",
   "notifications_enabled": "Notificaciones habilitadas",
   "settings_node": "Configuración de nodos",
   "settings_notification": "Notificaciones de escritorio",
-  "show_in_explorer": "Abrir en Blockchain Explorer",
+  "show_in_explorer": "Abrir en el explorador",
   "toggle_desktop_notification": "Habilitar o deshabilitar las notificaciones de escritorio",
   "updated": "Actualizado",
   "burn": "Quemar",
@@ -519,17 +519,17 @@
   "view_alias": "Ver alias",
   "recipient_required": "Se requiere destinatario",
   "unregistered_address": "Dirección no registrada",
-  "account_offline": "Ver solo",
+  "account_offline": "Observar",
   "account_safe": "Seguro",
   "account_unsafe": "¡Inseguro!",
   "error_connection_fail": "No se pudo conectar a un nodo. Parece que no es accesible. Por favor elije otro",
   "delete_selected": "Eliminar selección",
   "confirm_delete_accounts": "Confirmar eliminación",
-  "confirm_delete_accounts_hint": "Las cuentas se eliminarán solo de esta aplicación. Todos sus fondos se almacenan de forma segura en la cadena de bloques y siempre puede volver a importar las cuentas eliminadas con su frase de contraseña.",
+  "confirm_delete_accounts_hint": "Las cuentas se eliminarán solo de esta aplicación. Todos sus fondos se almacenan de forma segura en la blockchain y siempre puede volver a importar las cuentas eliminadas con su frase de recuperación.",
   "confirm_delete_accounts_q": "¿Está seguro de que desea eliminar estas cuentas?",
   "account_successfully_deleted": "Cuenta(s) eliminada(s) con éxito",
   "no_public_key_title": "¡Advertencia! - ¡Esta cuenta no posee una clave pública!",
-  "not_registered_title": "Esta cuenta no está registrada en la cadena de bloques.",
+  "not_registered_title": "Esta cuenta no está registrada en la blockchain.",
   "not_registered_warning": "Esta cuenta aún no tiene transacciones. Si tiene la intención de utilizar esta cuenta para enviar y/o recibir, se recomienda activar/proteger esta cuenta ahora.",
   "load_all_transactions": "Cargar todo",
   "load_all_transactions_hint": "La carga de todas las transacciones eventualmente genera muchas solicitudes con un alto uso de ancho de banda. Dependiendo de su conexión a Internet y de los nodos y la cantidad de transacciones, esta acción puede llevar algún tiempo. Una vez obtenidas, las transacciones se almacenan en caché localmente. ¿Realmente desea cargar todas las transacciones? (El límite de obtención está limitado a 10 000 transacciones)",
@@ -549,7 +549,7 @@
   "account_not_verified": "Cuenta no encontrada en la red. ¿Elegiste la red correcta? ¿Es la frase de recuperación correcta?",
   "account_verified": "Cuenta encontrada en la red",
   "error_storage_quota_exceeded": "Se excedió la cuota de almacenamiento del lado del cliente. Intente eliminar una o más cuentas para liberar espacio.",
-  "you_own_no_token": "Aún no tienes fichas",
+  "you_own_no_token": "Aún no tienes tokens",
   "chart_balance_change": "Cambio de balance durante el período mostrado",
   "waiting_for_payment": "A la espera del pago",
   "paid": "Pago registrado",
@@ -568,13 +568,13 @@
   "send_single_message": "Enviar mensaje",
   "message_is_binary": "Mensaje de datos",
   "add_account_or_contact": "Agregar cuenta o contacto",
-  "hint_new_account": "Esta es una cuenta nueva. Todavía no está registrado en la cadena, es decir, no tiene transacciones.",
+  "hint_new_account": "Esta es una cuenta nueva. Todavía no está registrado en la blockchain, es decir, no tiene transacciones.",
   "account_new": "Nuevo",
   "page_not_found_title": "Recurso no encontrado",
   "page_not_found_hint": "Incluso con blockchain, algunos espacios aún están descubiertos. ¡Como este de aquí!",
   "danger_zone": "Zona peligrosa",
   "reset_wallet": "Restablecer billetera",
-  "reset_wallet_hint": "Restablecer la billetera elimina todos los datos, cuentas y configuraciones almacenados localmente de la billetera. Puede volver a importar todas sus cuentas utilizando la frase de recuperación respectiva. Su Signa y tokens se almacenan de forma segura en la cadena de bloques y, por lo tanto, no se pierden mientras esté en posesión de las frases de recuperación.",
+  "reset_wallet_hint": "Restablecer la billetera elimina todos los datos, cuentas y configuraciones almacenados localmente de la billetera. Puede volver a importar todas sus cuentas utilizando la frase de recuperación respectiva. Su Signa y tokens se almacenan de forma segura en la blockchain y, por lo tanto, no se pierden mientras esté en posesión de las frases de recuperación.",
   "welcome_to_wallet": "Bienvenido a la cartera Signum Phoenix",
   "refresh_transactions_hint": "Recargar/Actualizar últimas transacciones",
   "desktop": "Escritorio",
